tests/test-files/define-type-gadt.txt
================================================================================
1 Define Mixed ADT/GADT
================================================================================

(package test-package)

(define-type T-dtg1
  (T-dtg1-1 (Type T-dtg1))
  T-dtg1-2)

--------------------------------------------------------------------------------

error: Malformed type definition
  --> test:3:0
   |
 3 |   (define-type T-dtg1
   |  _^
 4 | |   (T-dtg1-1 (Type T-dtg1))
 5 | |   T-dtg1-2)
   | |___________^  cannot define implicitly and explicitly typed constructors

================================================================================
2 GADT Non-Exhaustive Match
================================================================================

(package test-package)

(define-type T-dtg2
  (T2-Int (Type (Integer -> T-dtg2)))
  (T2-Str (Type (String -> T-dtg2))))

(declare t-dtg2->int (T-dtg2 -> Integer))
(define (t-dtg2->int g)
  (match g
    ((T2-Int x) x)))

--------------------------------------------------------------------------------

warn: non-exhaustive match
  --> test:9:2
    |
 9  |      (match g
    |  ____^
    | | ___-
 10 | ||     ((T2-Int x) x)))
    | ||___________________- missing case (T2-STR "_")
    | |____________________^ non-exhaustive match

================================================================================
3 GADT Non-Exhaustive Abstraction
================================================================================

(package test-package)

(define-type T-dtg3
  (T3-Int (Type (Integer -> T-dtg3)))
  (T3-Str (Type (String -> T-dtg3))))

(declare t-dtg3->int-abstr (T-dtg3 -> Integer))
(define (t-dtg3->int-abstr (T3-Int x))
  x)

--------------------------------------------------------------------------------

error: Non-exhaustive match
  --> test:8:27
   |
 8 |  (define (t-dtg3->int-abstr (T3-Int x))
   |                             ---------- missing case (T3-STR "_")

================================================================================
4 GADT Improper Constructor Return Type
================================================================================

(package test-package)

(define-type T-dtg4
  (T4-Good (Type (Integer -> T-dtg4)))
  (T4-Bad (Type (Integer -> String))))

--------------------------------------------------------------------------------

error: Malformed GADT constructor
  --> test:5:3
   |
 5 |    (T4-Bad (Type (Integer -> String))))
   |     ^^^^^^ GADT constructor must return T-DTG4
   |            -------------------------- in this type definition

================================================================================
5 GADT Improper Nullary Constructor
================================================================================

(package test-package)

(define-type T-dtg5
  (T5-Good (Type (Integer -> T-dtg5)))
  (T5-Bad (Type String)))

--------------------------------------------------------------------------------

error: Malformed GADT constructor
  --> test:5:3
   |
 5 |    (T5-Bad (Type String)))
   |     ^^^^^^ GADT constructor must return T-DTG5
   |            ------------- in this type definition

================================================================================
6 GADT Impossible Match Branch
================================================================================

(package test-package)

(define-type (T-dtg6 :a)
  (T6-Int (Type (Integer -> T-dtg6 Integer)))
  (T6-Str (Type (String -> T-dtg6 String))))

(declare 6-unwrap-int (T-dtg6 Integer -> Integer))
(define (6-unwrap-int g)
  (match g
    ((T6-Int x) x)
    ((T6-Str _) 0)))

--------------------------------------------------------------------------------

error: Type mismatch
  --> test:11:5
    |
 11 |      ((T6-Str _) 0)))
    |       ^^^^^^^^^^ Expected type '#<COALTON-IMPL/TYPECHECKER/TYPES:TAPP T-DTG6 INTEGER>' but pattern has type '#<COALTON-IMPL/TYPECHECKER/TYPES:TAPP T-DTG6 STRING>'

================================================================================
7 GADT Constraint Predicate Normalization
================================================================================

(package test-package)

(define-type (T-dtg7 :a)
  (T7-Gadt (Type (:a -> T-dtg7 :a))))

(define-class (C-dtg7 :a)
  (method-dtg7
   (:a -> :a)))

(declare t-dtg7-constraint-match (C-dtg7 :a => T-dtg7 :a -> T-dtg7 :a))
(define (t-dtg7-constraint-match x)
  (match x
    ((T7-Gadt a)
     (T7-Gadt (method-dtg7 a)))))

(declare t-dtg7-constraint-let (C-dtg7 :a => T-dtg7 :a -> T-dtg7 :a))
(define (t-dtg7-constraint-let x)
  (let (T7-Gadt a) = x)
  (T7-Gadt (method-dtg7 a)))

(declare t-dtg7-constraint-do ((coalton/classes:Monad :m) (C-dtg7 :a) => :m (T-dtg7 :a) -> :m (T-dtg7 :a)))
(define (t-dtg7-constraint-do m)
  (do
   ((T7-Gadt a) <- m)
   (coalton/classes:pure (T7-Gadt (method-dtg7 a)))))

(declare t-dtg7-constraint-abstr (C-dtg7 :a => T-dtg7 :a -> T-dtg7 :a))
(define (t-dtg7-constraint-abstr (T7-Gadt a))
  (T7-Gadt (method-dtg7 a)))

================================================================================
8 GADT Constructor With Trailing Form
================================================================================

(package test-package)

(define-type T-dtg8
  (T8-Bad (Type (Integer -> T-dtg8)) String))

--------------------------------------------------------------------------------

error: Malformed GADT constructor
  --> test:4:37
   |
 4 |    (T8-Bad (Type (Integer -> T-dtg8)) String))
   |            -------------------------- in this constructor definition
   |                                       ^^^^^^ unexpected trailing form (STRING)

================================================================================
9 GADT Constructor With Inner Trailing Form
================================================================================

(package test-package)

(define-type T-dtg9
  (T9-Bad (Type (Integer -> T-dtg9) String)))

--------------------------------------------------------------------------------

error: Malformed GADT constructor
  --> test:4:36
   |
 4 |    (T9-Bad (Type (Integer -> T-dtg9) String)))
   |            --------------------------------- in this constructor definition
   |                                      ^^^^^^ unexpected trailing form STRING

================================================================================
10 GADT Constructor With Empty Type Signature
================================================================================

(package test-package)

(define-type T-dtg10
  (T10-Bad (Type)))

--------------------------------------------------------------------------------

error: Malformed GADT constructor
  --> test:4:2
   |
 4 |    (T10-Bad (Type)))
   |    ^^^^^^^^^^^^^^^^ expected type signature
   |             ------ in this constructor definition

================================================================================
11 GADT Nullary Constructor Result With Wrong Arity
================================================================================

(package test-package)

(define-type (T-dtg11 :a)
  (T11-Bad (Type T-dtg11)))

--------------------------------------------------------------------------------

error: Kind mismatch
  --> test:4:17
   |
 4 |    (T11-Bad (Type T-dtg11)))
   |                   ^^^^^^^ Expected kind '*' but got kind '* -> *'

================================================================================
12 GADT Constructor Result With Too Many Type Arguments
================================================================================

(package test-package)

(define-type (T-dtg12 :a)
  (T12-Bad (Type (T-dtg12 Integer String))))

--------------------------------------------------------------------------------

error: Kind mismatch
  --> test:4:17
   |
 4 |    (T12-Bad (Type (T-dtg12 Integer String))))
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^ Expected kind '* -> *' but got kind '*'

================================================================================
13 GADT Constructor Returning Multiple Values
================================================================================

(package test-package)

(define-type T-dtg13
  (T13-Bad (Type (Integer -> T-dtg13 * T-dtg13))))

--------------------------------------------------------------------------------

error: Malformed GADT constructor
  --> test:4:3
   |
 4 |    (T13-Bad (Type (Integer -> T-dtg13 * T-dtg13))))
   |     ^^^^^^^ GADT constructor must return T-DTG13
   |             ------------------------------------- in this type definition

================================================================================
14 Derive On GADT
================================================================================

(package test-package)

(derive coalton/classes:Eq)
(define-type T-dtg14
  (T14-Bad (Type (Integer -> T-dtg14))))

--------------------------------------------------------------------------------

error: Invalid derive application
  --> test:4:13
   |
 4 |  (define-type T-dtg14
   |               ^^^^^^^  cannot apply (derive) to a GADT definition

================================================================================
15 Enum Repr On GADT Constructor With Arguments
================================================================================

(package test-package)

(repr :enum)
(define-type T-dtg15
  (T15-Bad (Type (Integer -> T-dtg15))))

--------------------------------------------------------------------------------

error: Invalid repr :enum attribute
  --> test:5:2
   |
 5 |    (T15-Bad (Type (Integer -> T-dtg15))))
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Enum constructors cannot have arguments.

================================================================================
16 GADT Constructor Call With Too Few Arguments
================================================================================

(package test-package)

(define-type (T-dtg16 :a :b)
  (T16-Pair (Type (Integer * String -> T-dtg16 Integer String))))

(declare t-dtg16-bad (T-dtg16 Integer String))
(define t-dtg16-bad
  (T16-Pair 1))

--------------------------------------------------------------------------------

error: Argument error
  --> test:8:2
   |
 8 |    (T16-Pair 1))
   |    ^^^^^^^^^^^^ Function call has 1 positional arguments but inferred type 'Integer * String -> T-dtg16 Integer String' takes 2

================================================================================
17 GADT Constructor Pattern With Too Few Arguments
================================================================================

(package test-package)

(define-type (T-dtg17 :a :b)
  (T17-Pair (Type (Integer * String -> T-dtg17 Integer String))))

(declare t-dtg17-bad (T-dtg17 Integer String -> Integer))
(define (t-dtg17-bad g)
  (match g
    ((T17-Pair x) x)))

--------------------------------------------------------------------------------

error: Argument mismatch
  --> test:9:5
   |
 9 |      ((T17-Pair x) x)))
   |       ^^^^^^^^^^^^ Constructor T17-PAIR takes 2 arguments but is given 1

================================================================================
18 GADT Refined Constructor On Wrong Type
================================================================================

(package test-package)

(define-type (T-dtg18 :a)
  (T18-Int (Type (Integer -> T-dtg18 Integer)))
  (T18-Str (Type (String -> T-dtg18 String))))

(declare t-dtg18-bad (T-dtg18 String))
(define t-dtg18-bad
  (T18-Int 3))

--------------------------------------------------------------------------------

error: Type mismatch
  --> test:9:2
   |
 9 |    (T18-Int 3))
   |    ^^^^^^^^^^^ Expected type 'T-dtg18 String' but got 'T-dtg18 Integer'

================================================================================
19 GADT Single of Multiple Constructors In Let Pattern
================================================================================

(package test-package)

(define-type (T-dtg19 :a)
  (T19-Str1 (Type (String -> T-dtg19 String)))
  (T19-Str2 (Type (String -> T-dtg19 String))))

(declare t-dtg19-bad (T-dtg19 String -> String))
(define (t-dtg19-bad x)
  (let (T19-Str1 s) = x)
  s)

--------------------------------------------------------------------------------

error: Non-exhaustive match
  --> test:9:7
   |
 9 |    (let (T19-Str1 s) = x)
   |         ------------ missing case (T19-STR2 "_")

================================================================================
20 GADT Single of Multiple Constructors In Abstraction
================================================================================

(package test-package)

(define-type (T-dtg20 :a)
  (T20-Str1 (Type (String -> T-dtg20 String)))
  (T20-Str2 (Type (String -> T-dtg20 String))))

(declare t-dtg20-bad (T-dtg20 String -> String))
(define (t-dtg20-bad (T20-Str1 s))
  s)

--------------------------------------------------------------------------------

error: Non-exhaustive match
  --> test:8:21
   |
 8 |  (define (t-dtg20-bad (T20-Str1 s))
   |                       ------------ missing case (T20-STR2 "_")
